[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-tungstenite = "0.11"
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
bollard = "0.15"
anyhow = "1.0"
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1"] }